# asix

./: .editorconfig  .gitignore  LICENSE  README.md  debug.py  graph_imports.fish  package.json  pnpm-lock.yaml  pyproject.toml
asix/: __init__.py  __main__.py  config.py  errors.py
asix/_transpiler/: __init__.py  __main__.py  utils.py
asix/fs/: __init__.py  char_dir.py  dev_dir.py  dir.py  entry_info.py  file.py  path.py  perm.py  proc_dir.py  proc_info_dir.py  raw.py  readable_stream.py  root.py  stdio.py  str_dir.py  symlink.py  utils.py  writable_stream.py
asix/interpreter/: __init__.py  do.py  fetch_line.py  graphviz.py  io.py  math.py  utils.py  write.py
asix/parser/: __init__.py  branch.py  function.py  lines.py  part_1.py  part_2.py  part_3.py  part_4.py  part_5.py  utils.py
esdmr.asix/: jsconfig.json  language-configuration.json  package.json
esdmr.asix/schemas/: a6.schema.json
esdmr.asix/snippets/: asix.json
esdmr.asix/syntaxes/: asix.tmLanguage.json
examples/: calc-with-inputs.a6  calc-with-inputs.a6.json  echo.a6  fizz-buzz.a6  hello-world.a6  print-all-ints.a6  simple-calc.a6  test_exec.a6  test_exec.a6.json  test_lib.a6
